src/objects/CntrbnMdl_Difficulty__c.object
<CustomObject>
    <description>This object allows you to store the data for difficulty of each TSE on monthly basis</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Difficulty_Rating__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Difficulty Rating</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Contribution Model Difficulty</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Difficulty_Rating__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DFN-{0000000}</displayFormat>
        <label>Difficulty Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contribution Model Difficulty</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>